...
            IconButton(onClick = { 
                viewModel.moveByWeek(forward = false)
            }) {
                Icon(Icons.AutoMirrored.Filled.ArrowBack, contentDescription = "Previous Week")
            }
            Column(horizontalAlignment = Alignment.CenterHorizontally) {
                Text("Planner", style = MaterialTheme.typography.titleLarge)
                Text(text = dayDate.format(formatter), fontSize = 14.sp)
            }
            IconButton(onClick = { 
                viewModel.moveByWeek(forward = true)
            }) {
                Icon(Icons.AutoMirrored.Filled.ArrowForward, contentDescription = "Next Week")
...
